# img2pdf

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  quality-gate.sh  代码审计验收报告.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  hxha-rust-reviewer.md  hxha-security-reviewer.md  rust-reviewer.md  security-reviewer.md
.claude/commands/: verify.md
.claude/hooks/: claude-code-setup-hint.py
.claude/skills/hxha-verify/: SKILL.md
.claude/skills/project-verify/: SKILL.md
.github/workflows/: rust.yml
src/: images.rs  main.rs  pdf.rs
