[package]
name = "img2pdf"
version = "0.1.0"
edition = "2024"
authors = ["x1ao1uo <sogura@qq.com>"]
license = "MIT"
readme = "README.md"
description = "Fixed A4 2x2 image grid PDF batch tool"
homepage = "https://github.com/x1ao1uo/img2pdf"
repository = "https://github.com/x1ao1uo/img2pdf"
keywords = ["image", "pdf", "a4", "grid"]
categories = ["command-line-utilities"]

[dependencies]
printpdf = { version = "0.10.0", default-features = false, features = ["jpeg", "png"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
chrono = "0.4.45"

[dev-dependencies]
lopdf = { version = "=0.43.0", default-features = false }
